kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: boocampapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  -  http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: myapp
              port:
                number: 8080
